fix: удалить отрицательный z-index у элемента списка для улучшения наложения

--- a/src/scss/pages/index/blocks/_list.scss
+++ b/src/scss/pages/index/blocks/_list.scss
@@ -297,7 +297,6 @@
     position: absolute;
     inset-block-start: 0;
     inset-inline: 0;
-    z-index: -1;
     aspect-ratio: 336 / 167;
     font-size: 0;
     border-radius: inherit;
